--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,45 +1,49 @@
 @import "tailwindcss";
-@import "tailwindcss/preflight";
-@tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+@theme {
+  /* Colors */
   --color-darkBlue: #10141e;
   --color-blue: #161d2f;
   --color-lightBlue: #5a698f;
   --color-red: #fc4747;
-  --gradient-black: linear-gradient(
-    180deg,
-    rgba(0, 0, 0, 0) 0%,
-    rgba(0, 0, 0, 0.75) 100%
-  );
 
-  --line-height-text: 125%;
-  --font-weight-text-light: 300;
-  --font-weight-text-medium: 500;
-  --letter-spacing-text: -0.5px;
-  --letter-spacing-text-mobile: -0.3px;
-  --letter-spacing-default: 0px;
+  /* Font Sizes: <size> / <line-height> */
+  --font-size-text1: 32px / 1.25; /* 125% line-height, 300 weight, -0.5px spacing */
+  --font-weight-text1: 300;
+  --letter-spacing-text1: -0.5px;
 
-  --font-size-text1: 32px;
-  --font-size-text1-mobile: 20px;
+  --font-size-text1-mobile: 20px / 1.25; /* 125% line-height, 300 weight, -0.3px spacing */
+  --font-weight-text1-mobile: 300;
+  --letter-spacing-text1-mobile: -0.3px;
 
-  --font-size-text2: 24px;
-  --font-size-text2-mobile: 16px;
+  --font-size-text2: 24px / 1.25; /* 125% line-height, 500 weight */
+  --font-weight-text2: 500;
 
-  --font-size-text3: 18px;
-  --font-size-text3-mobile: 15px;
+  --font-size-text2-mobile: 16px / 1.25; /* 125% line-height, 500 weight */
+  --font-weight-text2-mobile: 500;
 
-  --font-size-text4: 15px;
-  --font-size-text4-mobile: 14px;
+  --font-size-text3: 18px / 1.25; /* 125% line-height, 500 weight */
+  --font-weight-text3: 500;
 
-  --font-size-text5: 13px;
-  --font-size-text5-mobile: 12px;
+  --font-size-text3-mobile: 15px / 1.25; /* 125% line-height, 500 weight */
+  --font-weight-text3-mobile: 500;
 
-  --font-size-text6: 11px;
+  --font-size-text4: 15px / 1.25; /* 125% line-height, 300 weight */
+  --font-weight-text4: 300;
 
-  --spacing-0: 0px;
+  --font-size-text4-mobile: 14px / 1.25; /* 125% line-height, 300 weight */
+  --font-weight-text4-mobile: 300;
+
+  --font-size-text5: 13px / 1.25; /* 125% line-height, 500 weight */
+  --font-weight-text5: 500;
+
+  --font-size-text5-mobile: 12px / 1.25; /* 125% line-height, 500 weight */
+  --font-weight-text5-mobile: 500;
+
+  --font-size-text6: 11px / 1.25; /* 125% line-height, 300 weight */
+  --font-weight-text6: 300;
+
+  /* Spacing scale */
   --spacing-100: 8px;
   --spacing-200: 16px;
   --spacing-300: 24px;
@@ -48,10 +52,7 @@
   --spacing-700: 56px;
   --spacing-900: 72px;
   --spacing-1000: 80px;
-}
 
-body {
-  background: var(--color-lightBlue);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  /* Font Families */
+  --font-family-outfit: "Outfit", sans-serif;
 }
